(test
 (deps
  (:dict ./words))
 (name dict)
 (modules dict)
 (build_if
  (= %{ocaml-config:os_type} "Unix"))
 (libraries ancient unix)
 (action
  (progn
   (run %{test} write %{dict} output 0x440000000000)
   (run %{test} verify %{dict} output))))

(test
 (name mark_follow)
 (modules mark_follow)
 (libraries ancient))
